<resources>
    <string name="app_name">Practicas</string>
    <string name="txt_opTv">TextView</string>
    <string name="txt_opEt">EditText</string>
    <string name="txt_opButton">Button</string>
    <string name="txt_opRadio">Radio</string>
    <string name="txt_opCheck">CheckBox</string>
    <string name="txt_opSpinner">Spinner</string>
    <string name="txt_opListView">ListView</string>
    <string name="ir_a_ejemplo">Ir a ejemplo</string>
    <string name="buttons">Botones</string>
    <string name="boton_enviar">Boton enviar</string>
</resources>